<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="handler"
            type="com.gerwalex.radarplott.main.OpponentVesselData" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/content_padding">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text"
                android:maxLines="1"
                android:text="@={handler.name}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/rwsp1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rwsp1">

            <com.gerwalex.radarplott.views.FloatValueEditView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:value="@={handler.rwSp1}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rwsp2">

            <com.gerwalex.radarplott.views.FloatValueEditView
                android:id="@+id/rwsp2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:decimalPlaces="0"
                app:value="@={handler.rwSp2}" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dist1">

            <com.gerwalex.radarplott.views.FloatValueEditView
                android:id="@+id/dist1"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:decimalPlaces="1"
                app:value="@={handler.dist1}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dist2">

            <com.gerwalex.radarplott.views.FloatValueEditView
                android:id="@+id/dist2"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                app:value="@={handler.dist2}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/minutes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/minutes">

            <com.gerwalex.radarplott.views.FloatValueEditView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:decimalPlaces="0"
                app:value="@={handler.minutes}" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>