<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="lage"
            type="com.gerwalex.radarplott.math.Lage" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/content_padding">

        <TextView
            android:id="@+id/TVTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lage"
            android:textAppearance="@style/RawApp.TextAppearance.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--Rechtweisender Kurs und FdW-->
        <TextView
            android:id="@+id/TVrwKurs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heading"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TVTitle" />

        <TextView
            android:id="@+id/TVrwFdW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TVrwKurs" />

        <TextView
            android:id="@+id/TVCPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CPA"
            android:textAppearance="@style/RawApp.TextAppearance.ExtraSmall"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TVrwFdW" />

        <TextView
            android:id="@+id/TVAbstandCPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AbstandCPA"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TVCPA" />

        <TextView
            android:id="@+id/TVPeilungCPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rwPeilung"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TVAbstandCPA" />

        <TextView
            android:id="@+id/TVTimeCPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TimeToCPA"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TVPeilungCPA" />

        <TextView
            android:id="@+id/TVDistanceCPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Distance"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TVTimeCPA" />

        <TextView
            android:id="@+id/TVBCR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BCR"
            android:textAppearance="@style/RawApp.TextAppearance.ExtraSmall"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TVDistanceCPA" />

        <TextView
            android:id="@+id/TVAbstandBCR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AbstandBCR"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TVBCR" />

        <TextView
            android:id="@+id/TVTimeBCR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TimeToBCR"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TVAbstandBCR" />


        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="TVrwKurs,TVrwFdW,TVCPA,TVAbstandCPA,TVPeilungCPA,TVTimeCPA,TVBCR,TVTimeBCR,TVAbstandBCR" />

        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{@string/fDeg(lage.headingAbsolut)}"
            app:layout_constraintBaseline_toBaselineOf="@id/TVrwKurs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrier" />

        <TextView
            android:id="@+id/speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{@string/fSm(lage.speedAbsolut)}"
            app:layout_constraintBaseline_toBaselineOf="@id/TVrwFdW"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrier" />

        <TextView
            android:id="@+id/abstandCPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{@string/fSm(lage.abstandCPA)}"
            app:layout_constraintBaseline_toBaselineOf="@id/TVAbstandCPA"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrier" />

        <TextView
            android:id="@+id/distanceCPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{@string/fSm(lage.distanceToCPA)}"
            app:layout_constraintBaseline_toBaselineOf="@id/TVDistanceCPA"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrier" />

        <TextView
            android:id="@+id/peilungCPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{@string/fDeg(lage.peilungRechtweisendCPA)}"
            app:layout_constraintBaseline_toBaselineOf="@id/TVPeilungCPA"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrier" />

        <TextView
            android:id="@+id/timeCPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{@string/fMinutes(lage.timeToCPA)}"
            app:layout_constraintBaseline_toBaselineOf="@id/TVTimeCPA"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrier" />

        <TextView
            android:id="@+id/abstandBCR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{@string/fSm(lage.abstandBCR)}"
            app:layout_constraintBaseline_toBaselineOf="@id/TVAbstandBCR"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrier" />


        <TextView
            android:id="@+id/timeBCR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{@string/fMinutes(lage.timeToBCR)}"
            app:layout_constraintBaseline_toBaselineOf="@id/TVTimeBCR"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrier" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>